# keyword_extracter_onnx

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml
models/docs/: MODEL_SELECTION.md
scripts/: 1_load_model.py  2_adapt_model.py  3_convert_to_onnx.py  __init__.py  pyproject.toml
scripts/utils/: __init__.py  display.py
tests/: conftest.py  test_adapted_model.py  test_onnx_model.py
