[project]
name = "keyword-extracter-onnx"
version = "0.1.0"
description = "Browser-based keyword extraction using DistilBERT and ONNX Runtime"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "optimum[onnxruntime]>=1.15.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[tool.uv]
# Use PyTorch CPU-only version for faster downloads and smaller size
index-url = "https://pypi.org/simple"
dev-dependencies = []

[tool.uv.sources]
# Specify PyTorch CPU wheel repository
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
